# kkshell

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  readme.md  session_manager.cpp  session_manager.h  settings.cpp  settings.h
cmake/: deb.cmake
common/: CMakeLists.txt
common/config/: CMakeLists.txt  config_manager.cpp  config_manager.h
common/utils/: CMakeLists.txt  aes_utils.cpp  aes_utils.h
resources/: kkshell.desktop  resources.qrc
resources/forms/: mainwindow.ui  session_manager.ui  settings.ui
resources/ini/: settings.ini
resources/lang/: kkshell_zh_CN.ts
sources/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
sources/resources/: resources.qrc  settings.json
sources/setting/: CMakeLists.txt  SettingManager.cpp  SettingManager.h  Settings.h
sources/utils/: CMakeLists.txt
sources/utils/aes/: AESUtils.cpp  AESUtils.h
sources/utils/file/: FileUtils.cpp  FileUtils.h
sources/widgets/: SettingDialog.cpp  SettingDialog.h
sources/widgets/command/: CommandButton.cpp  CommandButton.h  CommandButtonEditor.cpp  CommandButtonEditor.h  CommandCategoryEditor.cpp  CommandCategoryEditor.h  CommandToolBar.cpp  CommandToolBar.h
sources/widgets/session/: LocalSessionEditor.cpp  LocalSessionEditor.h  SSHSessionEditor.cpp  SSHSessionEditor.h  SerialSessionEditor.cpp  SerialSessionEditor.h  SessionCategoryEditor.cpp  SessionCategoryEditor.h  SessionListWidget.cpp  SessionListWidget.h
sources/widgets/tabwidget/: SessionTabWidget.cpp  SessionTabWidget.h  TableTitleEditor.cpp  TableTitleEditor.h
sources/widgets/terminal/: BaseTerminal.cpp  BaseTerminal.h  LocalTerminal.cpp  LocalTerminal.h  SSHTerminal.cpp  SSHTerminal.h  SerialTerminal.cpp  SerialTerminal.h
terminal/: CMakeLists.txt  base_terminal.cpp  base_terminal.h  local_terminal.cpp  local_terminal.h  serial_terminal.cpp  serial_terminal.h  ssh_terminal.cpp  ssh_terminal.h
widget/: command_button.cpp  command_button.h  edit_command_button_dialog.cpp  edit_command_button_dialog.h  edit_command_group_dialog.cpp  edit_command_group_dialog.h  edit_session_dialog.cpp  edit_session_dialog.h  new_command_button_dialog.cpp  new_command_button_dialog.h  new_command_group_dialog.cpp  new_command_group_dialog.h  new_session_dialog.cpp  new_session_dialog.h
